{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 52,
  "lineage": "4c551467-cea5-a2ff-7f81-e765f326675a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:internet-gateway/igw-0456ba1e575ff46d6",
            "id": "igw-0456ba1e575ff46d6",
            "owner_id": "522527377907",
            "tags": {
              "Name": "mohib-serverless-project-5-igw"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-igw"
            },
            "vpc_id": "vpc-0ce714e5580ae6aa8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:route-table/rtb-003528d88af28fcc8",
            "id": "rtb-003528d88af28fcc8",
            "owner_id": "522527377907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0456ba1e575ff46d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mohib-serverless-project-5-public-rt"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce714e5580ae6aa8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfe7c7065d5c38d0",
            "route_table_id": "rtb-003528d88af28fcc8",
            "subnet_id": "subnet-070367fbb160e8427"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ca004156a3d3a07",
            "route_table_id": "rtb-003528d88af28fcc8",
            "subnet_id": "subnet-01aaef21e8d6b048e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:security-group/sg-0ac31611d40279eaf",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac31611d40279eaf",
            "ingress": [],
            "name": "mohib-serverless-project-5-lambda-sg",
            "name_prefix": "",
            "owner_id": "522527377907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mohib-serverless-project-5-lambda-sg"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce714e5580ae6aa8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:security-group/sg-05ea5d7e79c94fd11",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ea5d7e79c94fd11",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac31611d40279eaf"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mohib-serverless-project-5-rds-sg",
            "name_prefix": "",
            "owner_id": "522527377907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mohib-serverless-project-5-rds-sg"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce714e5580ae6aa8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.11.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:subnet/subnet-084c81ec16fc6dbb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084c81ec16fc6dbb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522527377907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mohib-serverless-project-5-private-10.0.11.0/24"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-private-10.0.11.0/24"
            },
            "vpc_id": "vpc-0ce714e5580ae6aa8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.12.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:subnet/subnet-0b8a48f16de671418",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8a48f16de671418",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522527377907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mohib-serverless-project-5-private-10.0.12.0/24"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-private-10.0.12.0/24"
            },
            "vpc_id": "vpc-0ce714e5580ae6aa8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:subnet/subnet-070367fbb160e8427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070367fbb160e8427",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522527377907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mohib-serverless-project-5-public-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-public-10.0.1.0/24"
            },
            "vpc_id": "vpc-0ce714e5580ae6aa8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:subnet/subnet-01aaef21e8d6b048e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aaef21e8d6b048e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522527377907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mohib-serverless-project-5-public-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-public-10.0.2.0/24"
            },
            "vpc_id": "vpc-0ce714e5580ae6aa8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522527377907:vpc/vpc-0ce714e5580ae6aa8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2c76317951d9417",
            "default_route_table_id": "rtb-061dfb75f289334a7",
            "default_security_group_id": "sg-03e0a79fbab597687",
            "dhcp_options_id": "dopt-043c663c06ba18173",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce714e5580ae6aa8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061dfb75f289334a7",
            "owner_id": "522527377907",
            "tags": {
              "Name": "mohib-serverless-project-5-vpc"
            },
            "tags_all": {
              "Name": "mohib-serverless-project-5-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}